# rag-as-a-service

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
eval/: README.md  dataset.jsonl  ragas_eval.py  run_ragas.py
eval/results/: latest.md  ragas_20260520_234242.csv  ragas_20260520_234242.json  ragas_20260521_090522.csv  ragas_20260521_090522.json  ragas_20260528_155233.csv  ragas_20260528_155233.json
src/rag_service/: config.py  main.py  retry.py
src/rag_service/api/: routes.py  schemas.py
src/rag_service/cache/: redis_cache.py
src/rag_service/core/: generation.py  ingestion.py  pipeline.py  retrieval.py
src/rag_service/llm/: openai_client.py
src/rag_service/observability/: cost_tracker.py
tests/unit/: test_generation.py  test_ingestion.py  test_pipeline.py  test_redis_cache.py  test_retry.py  test_routes.py
