[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-gemini>=0.3.0",
    "llama-index-llms-openai-like>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "chromadb>=0.5.0,<0.6.0",
    "onnxruntime>=1.14.0,<1.24.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ragas>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
